# dataset_query

./: .env.example  .gitignore  README.md  adx.py  duckdb.py  motherduck.py  pyproject.toml
queries/adx/: heavy.kql  simple.kql
queries/duckdb/: heavy.sql  local_heavy.sql  local_simple.sql  simple.sql
queries/motherduck/: heavy.sql  simple.sql
src/query_dataset/: __init__.py  cli.py  config.py  results.py
src/query_dataset/clients/: __init__.py  adx_client.py  duckdb_client.py  motherduck_client.py
